syntax = "proto3";

package common;

option go_package = "github.com/irvandMR/go-grpc-ecommerce-BE/pb/common";

message BaseResponse {
    int32 statuse_code = 1;
    string message = 2;
    bool is_error = 3;
    repeated ValidationError validation_errors = 4;
}

message ValidationError {
    string field = 1;
    string description = 2;
}   